--- a/app.json
+++ b/app.json
@@ -1,10 +1,11 @@
+
 {
   "expo": {
     "name": "Safe Space",
     "slug": "Safe Space",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/natively-dark.png",
+    "icon": "./assets/app-icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -15,15 +16,17 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.Natively",
+      "icon": "./assets/app-icon.png",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/natively-dark.png",
-        "backgroundColor": "#000000"
+        "foregroundImage": "./assets/app-icon.png",
+        "backgroundColor": "#1890FF"
       },
+      "icon": "./assets/app-icon.png",
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.Natively"
     },
