--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "slug": "Safe Space",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/app-icon.png",
+    "icon": "./assets/images/final_quest_240x240.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -16,17 +16,17 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.Natively",
-      "icon": "./assets/app-icon.png",
+      "icon": "./assets/images/final_quest_240x240.png",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/app-icon.png",
+        "foregroundImage": "./assets/images/final_quest_240x240.png",
         "backgroundColor": "#1890FF"
       },
-      "icon": "./assets/app-icon.png",
+      "icon": "./assets/images/final_quest_240x240.png",
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.Natively"
     },
