feat: Update app icons to use app-icon.png and set adaptive icon color

--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "slug": "Safe Space",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/final_quest_240x240.png",
+    "icon": "./assets/app-icon.png",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
@@ -16,22 +16,22 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anonymous.Natively",
-      "icon": "./assets/images/final_quest_240x240.png",
+      "icon": "./assets/app-icon.png",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/final_quest_240x240.png",
-        "backgroundColor": "#1890FF"
+        "foregroundImage": "./assets/app-icon.png",
+        "backgroundColor": "#4A90E2"
       },
-      "icon": "./assets/images/final_quest_240x240.png",
+      "icon": "./assets/app-icon.png",
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.Natively"
     },
     "web": {
-      "favicon": "./assets/images/final_quest_240x240.png",
+      "favicon": "./assets/app-icon.png",
       "bundler": "metro"
     },
     "plugins": [
