feat: Implement global keyboard and text input fix

--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
       "icon": "./assets/images/b74402c4-5458-43d3-8d1e-b0a3c26a1e4e.jpeg",
       "edgeToEdgeEnabled": true,
       "package": "com.anonymous.Natively",
-      "softwareKeyboardLayoutMode": "pan"
+      "softwareKeyboardLayoutMode": "resize"
     },
     "web": {
       "favicon": "./assets/images/b74402c4-5458-43d3-8d1e-b0a3c26a1e4e.jpeg",
