--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "version": "1.0.0",
   "main": "index.ts",
   "packageManager": "npm@10.8.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=10.0.0",
+    "pnpm": "please-use-npm",
+    "yarn": "please-use-npm"
+  },
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
     "android": "EXPO_NO_TELEMETRY=1 expo start --android",
@@ -11,7 +17,8 @@
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "preinstall": "npx only-allow npm"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
