--- a/.npmrc
+++ b/.npmrc
@@ -4,5 +4,11 @@ engine-strict=true
 save-exact=false
 legacy-peer-deps=false
 
-# Explicitly disable pnpm
+# Explicitly disable pnpm and yarn
 enable-pnpm=false
+package-manager-strict=true
+
+# Ensure npm is used
+prefer-offline=false
+audit=false
+fund=false
