--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "yarn": "please-use-npm"
   },
   "scripts": {
+    "preinstall": "npx only-allow npm",
     "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
     "android": "EXPO_NO_TELEMETRY=1 expo start --android",
     "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
-    "lint": "eslint .",
-    "preinstall": "npx only-allow npm"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
