--- a/.npmrc
+++ b/.npmrc
@@ -12,3 +12,7 @@ package-manager-strict=true
 prefer-offline=false
 audit=false
 fund=false
+
+# Additional pnpm blocking
+shamefully-hoist=false
+auto-install-peers=false
