fix: Enforce npm and remove conflicting preinstall script

--- a/.npmrc
+++ b/.npmrc
@@ -1,18 +1,8 @@
 
 # Force npm as the package manager
 engine-strict=true
-save-exact=false
-legacy-peer-deps=false
-
-# Explicitly disable pnpm and yarn
-enable-pnpm=false
 package-manager-strict=true
 
-# Ensure npm is used
-prefer-offline=false
+# Disable telemetry
 audit=false
 fund=false
-
-# Additional pnpm blocking
-shamefully-hoist=false
-auto-install-peers=false
