--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,15 @@
 
 # Force npm as the package manager
 engine-strict=true
-package-manager-strict=true
+
+# Disable other package managers
+auto-install-peers=false
+shamefully-hoist=false
 
 # Disable telemetry
 audit=false
 fund=false
+
+# Ensure npm is used
+save-exact=false
+legacy-peer-deps=false
