--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,7 @@
 
 # Force npm as the package manager
 engine-strict=true
+package-lock=true
 
 # Disable other package managers
 auto-install-peers=false
