--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
+    "build": "npm run build:web",
+    "install": "npm install",
     "lint": "eslint ."
   },
   "dependencies": {
