feat: Enforce npm, disable Corepack, and pin Node version

--- a/.npmrc
+++ b/.npmrc
@@ -1,12 +1,13 @@
 
-# Force npm as the package manager
-engine-strict=true
+# Enforce npm as the only package manager
 package-lock=true
-
-# Disable telemetry
 audit=false
 fund=false
+engine-strict=true
 
-# Ensure npm is used
+# Prevent other package managers
 save-exact=false
 legacy-peer-deps=false
+
+# Disable corepack to prevent auto-switching to pnpm/yarn
+enable-pre-post-scripts=true
