--- a/eas.json
+++ b/eas.json
@@ -10,7 +10,8 @@
         "install": "npm ci"
       },
       "env": {
-        "COREPACK_ENABLE_STRICT": "0"
+        "COREPACK_ENABLE_STRICT": "0",
+        "COREPACK_ENABLE_AUTO_PIN": "0"
       }
     },
     "preview": {
@@ -21,7 +22,8 @@
         "install": "npm ci"
       },
       "env": {
-        "COREPACK_ENABLE_STRICT": "0"
+        "COREPACK_ENABLE_STRICT": "0",
+        "COREPACK_ENABLE_AUTO_PIN": "0"
       }
     },
     "production": {
@@ -31,7 +33,8 @@
         "install": "npm ci"
       },
       "env": {
-        "COREPACK_ENABLE_STRICT": "0"
+        "COREPACK_ENABLE_STRICT": "0",
+        "COREPACK_ENABLE_AUTO_PIN": "0"
       }
     }
   }
