build: Enforce npm usage and disable other package managers

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,15 @@ engine-strict=true
 package-lock=true
 fund=false
 audit=false
+save-exact=false
+legacy-peer-deps=false
+
+# Explicitly disable other package managers
+enable-pre-post-scripts=true
+ignore-scripts=false
+
+# Force npm as the package manager
+package-manager-strict=true
+
+# Disable corepack
+corepack=false
