--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 
+# Enforce npm as the only package manager
 engine-strict=true
 package-lock=true
 fund=false
@@ -13,5 +14,9 @@ ignore-scripts=false
 # Force npm as the package manager
 package-manager-strict=true
 
-# Disable corepack
+# Disable corepack completely
 corepack=false
+
+# Additional npm enforcement
+prefer-offline=false
+prefer-online=true
