fix: Enforce npm and prevent pnpm/Yarn usage with config files

--- a/.npmrc
+++ b/.npmrc
@@ -20,3 +20,6 @@ corepack=false
 # Additional npm enforcement
 prefer-offline=false
 prefer-online=true
+
+# Prevent pnpm from running
+shamefully-hoist=false
