chore: Relax npmrc settings to allow other package managers

--- a/.npmrc
+++ b/.npmrc
@@ -1,25 +1,16 @@
 
-# Enforce npm as the only package manager
-engine-strict=true
-package-lock=true
+# Recommended package manager: npm
+# But allow other package managers in CI/CD environments
+
 fund=false
 audit=false
 save-exact=false
 legacy-peer-deps=false
 
-# Explicitly disable other package managers
+# Enable scripts
 enable-pre-post-scripts=true
 ignore-scripts=false
 
-# Force npm as the package manager
-package-manager-strict=true
-
-# Disable corepack completely
-corepack=false
-
-# Additional npm enforcement
+# Network preferences
 prefer-offline=false
 prefer-online=true
-
-# Prevent pnpm from running
-shamefully-hoist=false
