--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.ts",
   "packageManager": "npm@10.8.2",
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=10.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
-    "postinstall": "node -e \"console.log('✓ Dependencies installed successfully with npm')\"",
+    "postinstall": "node -e \"console.log('✓ Dependencies installed successfully')\"",
     "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
     "android": "EXPO_NO_TELEMETRY=1 expo start --android",
     "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
