--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
-
 {
   "name": "Natively",
   "version": "1.0.0",
   "main": "index.ts",
-  "packageManager": "npm@10.8.2",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -32,6 +30,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.86.2",
     "@types/difflib": "^0.2.7",
+    "@types/uuid": "^11.0.0",
     "difflib": "^0.2.4",
     "eas": "^0.1.0",
     "expo": "~54.0.1",
@@ -67,6 +66,7 @@
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "react-router-dom": "^7.1.3",
+    "uuid": "^13.0.0",
     "workbox-cli": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-webpack-plugin": "^7.3.0"
@@ -92,5 +92,6 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5"
   },
+  "packageManager": "npm@10.8.2",
   "private": true
 }
