build: Enforce npm and prevent other package managers usage

--- a/.npmrc
+++ b/.npmrc
@@ -12,3 +12,9 @@ save-exact=false
 
 # Ensure npm is used
 user-agent=npm
+
+# Disable Corepack completely
+corepack=false
+
+# Additional npm enforcement
+package-manager-strict=true
