docs: Update documentation for package manager configuration

--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "name": "Natively",
   "version": "1.0.0",
   "main": "index.ts",
-  "packageManager": "npm@10.8.2",
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=10.0.0",
-    "pnpm": "please-use-npm",
-    "yarn": "please-use-npm",
-    "bun": "please-use-npm"
+    "npm": ">=10.0.0"
   },
   "scripts": {
     "postinstall": "node -e \"console.log('✓ Dependencies installed successfully with npm')\"",
