--- a/.npmrc
+++ b/.npmrc
@@ -1,20 +1,1 @@
-
-# Force npm as the only package manager
-package-lock=true
-engine-strict=true
-fund=false
-audit=false
-legacy-peer-deps=false
-
-# Disable other package managers
-enable-pre-post-scripts=true
-save-exact=false
-
-# Ensure npm is used
-user-agent=npm
-
-# Disable Corepack completely
-corepack=false
-
-# Additional npm enforcement
-package-manager-strict=true
+node-linker=hoisted
