--- a/eas.json
+++ b/eas.json
@@ -1,47 +1,16 @@
-
 {
   "build": {
     "development": {
       "developmentClient": true,
       "distribution": "internal",
-      "autoIncrement": true,
-      "node": "18.0.0",
-      "npm": {
-        "install": "npm ci"
-      },
-      "env": {
-        "NPM_CONFIG_FUND": "false",
-        "NPM_CONFIG_AUDIT": "false",
-        "EXPO_NO_TELEMETRY": "1",
-        "EXPO_USE_FAST_RESOLVER": "1"
-      }
+      "autoIncrement": true
     },
     "preview": {
       "distribution": "internal",
-      "autoIncrement": true,
-      "node": "18.0.0",
-      "npm": {
-        "install": "npm ci"
-      },
-      "env": {
-        "NPM_CONFIG_FUND": "false",
-        "NPM_CONFIG_AUDIT": "false",
-        "EXPO_NO_TELEMETRY": "1",
-        "EXPO_USE_FAST_RESOLVER": "1"
-      }
+      "autoIncrement": true
     },
     "production": {
-      "autoIncrement": true,
-      "node": "18.0.0",
-      "npm": {
-        "install": "npm ci"
-      },
-      "env": {
-        "NPM_CONFIG_FUND": "false",
-        "NPM_CONFIG_AUDIT": "false",
-        "EXPO_NO_TELEMETRY": "1",
-        "EXPO_USE_FAST_RESOLVER": "1"
-      }
+      "autoIncrement": true
     }
   }
 }
