--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
-
 {
   "name": "Natively",
   "version": "1.0.0",
   "main": "index.ts",
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=10.0.0"
-  },
   "scripts": {
-    "postinstall": "node -e \"console.log('✓ Dependencies installed successfully with npm')\"",
-    "dev": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "dev": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
+    "android": "EXPO_NO_TELEMETRY=1 expo start --android",
+    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
+    "web": "EXPO_NO_TELEMETRY=1 expo start --web",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
-    "build": "npm run build:web",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -32,7 +25,6 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@supabase/supabase-js": "^2.86.2",
     "@types/difflib": "^0.2.7",
-    "@types/uuid": "^11.0.0",
     "difflib": "^0.2.4",
     "eas": "^0.1.0",
     "expo": "~54.0.1",
@@ -52,9 +44,9 @@
     "expo-symbols": "^1.0.6",
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-css-interop": "^0.1.22",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "^2.24.0",
@@ -68,7 +60,6 @@
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
     "react-router-dom": "^7.1.3",
-    "uuid": "^13.0.0",
     "workbox-cli": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-webpack-plugin": "^7.3.0"
@@ -76,7 +67,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.19.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.1.12",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -89,10 +80,7 @@
     "webpack-cli": "^6.0.1"
   },
   "resolutions": {
-    "@expo/prebuild-config": "latest",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.5"
+    "@expo/prebuild-config": "latest"
   },
   "private": true
 }
