--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "Natively",
   "version": "1.0.0",
@@ -40,7 +39,7 @@
     "expo-linking": "^8.0.7",
     "expo-mail-composer": "^15.0.8",
     "expo-network": "^8.0.7",
-    "expo-router": "^6.0.0",
+    "expo-router": "~5.0.7",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
     "expo-symbols": "^1.0.6",
