fix: Update expo-router to ^6.0.0 for Expo SDK 54 compatibility

--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-
 {
   "expo": {
     "name": "Safe Space",
@@ -47,5 +46,6 @@
     "extra": {
       "router": {}
     }
-  }
+  },
+  "scheme": "Safe Space"
 }
