--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "expo-mail-composer": "^15.0.8",
     "expo-network": "^8.0.7",
 
-    "expo-router": "~5.0.0",
+    "expo-router": "^6.0.0",
 
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
