--- a/app.json
+++ b/app.json
@@ -1,3 +1,4 @@
+
 {
   "expo": {
     "name": "Safe Space",
@@ -45,6 +46,9 @@
     },
     "extra": {
       "router": {}
+    },
+    "packagerOpts": {
+      "hostType": "lan"
     }
   },
   "scheme": "Safe Space"
