chore: Update dependencies and scripts for LAN mode

--- a/app.json
+++ b/app.json
@@ -49,6 +49,9 @@
     },
     "packagerOpts": {
       "hostType": "lan"
+    },
+    "developer": {
+      "tool": "expo-cli"
     }
   },
   "scheme": "Safe Space"
