--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "private": true,
 
   "scripts": {
-    "start": "expo start",
-    "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "android": "EXPO_NO_TELEMETRY=1 expo start --android",
-    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
+    "start": "expo start --lan",
+    "dev": "EXPO_NO_TELEMETRY=1 expo start --lan",
+    "android": "EXPO_NO_TELEMETRY=1 expo start --android --lan",
+    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios --lan",
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
-    "start:clean": "expo start -c",
+    "start:clean": "expo start -c --lan",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
     "lint": "eslint ."
