fix: Disable tunnel mode in app.json to use LAN mode

--- a/app.json
+++ b/app.json
@@ -46,6 +46,12 @@
     },
     "extra": {
       "router": {}
+    },
+    "packagerOpts": {
+      "tunnel": false
+    },
+    "developer": {
+      "tool": "expo-cli"
     }
   },
   "scheme": "Safe Space"
