fix: Correct slug, remove duplicate scheme, and force LAN mode

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 {
   "expo": {
     "name": "Safe Space",
-    "slug": "Safe Space",
+    "slug": "safe-space",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/b74402c4-5458-43d3-8d1e-b0a3c26a1e4e.jpeg",
@@ -47,12 +47,9 @@
     "extra": {
       "router": {}
     },
-    "packagerOpts": {
-      "tunnel": false
-    },
+    "hostType": "lan",
     "developer": {
       "tool": "expo-cli"
     }
-  },
-  "scheme": "Safe Space"
+  }
 }
