--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
-
 {
   "name": "Natively",
   "version": "1.0.0",
   "main": "index.ts",
   "private": true,
-
   "scripts": {
     "start": "expo start --lan",
     "dev": "EXPO_NO_TELEMETRY=1 expo start --lan",
@@ -12,28 +10,24 @@
     "ios": "EXPO_NO_TELEMETRY=1 expo start --ios --lan",
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
     "start:clean": "expo start -c --lan",
+    "doctor": "expo doctor",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
     "lint": "eslint ."
   },
-
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/runtime": "^7.26.9",
     "@bacons/apple-targets": "^3.0.2",
     "@expo/metro-runtime": "~6.1.1",
     "@expo/vector-icons": "^15.0.2",
-
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.3.0",
-
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
-
     "@supabase/supabase-js": "^2.86.2",
     "difflib": "^0.2.4",
-
     "expo": "~54.0.1",
     "expo-blur": "^15.0.6",
     "expo-constants": "~18.0.8",
@@ -45,19 +39,15 @@
     "expo-linking": "^8.0.7",
     "expo-mail-composer": "^15.0.8",
     "expo-network": "^8.0.7",
-
-    "expo-router": "~4.0.9",
-
+    "expo-router": "^6.0.21",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
     "expo-symbols": "^1.0.6",
     "expo-system-ui": "^6.0.7",
     "expo-web-browser": "^15.0.6",
-
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
-
     "react-native-css-interop": "^0.1.22",
     "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "^2.24.0",
@@ -70,14 +60,11 @@
     "react-native-web": "~0.21.1",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "0.5.1",
-
     "react-router-dom": "^7.1.3",
-
     "workbox-cli": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-webpack-plugin": "^7.3.0"
   },
-
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.19.0",
