--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
+
 {
   "name": "Natively",
   "version": "1.0.0",
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "start": "expo start --lan",
-    "dev": "EXPO_NO_TELEMETRY=1 expo start --lan",
-    "android": "EXPO_NO_TELEMETRY=1 expo start --android --lan",
-    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios --lan",
+    "start": "expo start",
+    "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "android": "EXPO_NO_TELEMETRY=1 expo start --android",
+    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
     "web": "EXPO_NO_TELEMETRY=1 expo start --web",
-    "start:clean": "expo start -c --lan",
+    "start:clean": "expo start -c",
     "doctor": "expo doctor",
     "build:web": "expo export -p web && npx workbox generateSW workbox-config.js",
     "build:android": "expo prebuild -p android",
