--- a/app.json
+++ b/app.json
@@ -44,6 +44,9 @@
     "experiments": {
       "typedRoutes": true,
       "newArchEnabled": false
+    },
+    "packagerOpts": {
+      "tunnel": false
     }
   }
 }
